--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,8 @@ homepage:       https://github.com/hermanbergwerf/euclid
 environment:
   sdk:          '>=1.8.0 <2.0.0'
 dependencies:
+  tuple:        ^1.0.1
+  complex:      ^0.1.2
   vector_math:  ^2.0.4
 dev_dependencies:
   test:         ^0.12.20+13
